--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -37,4 +37,12 @@ body {
 .container {
     display: grid;
     grid-template-rows: 80vh min-content 40vw repeat(3, min-content); //for second row we are using min-content as we want the space to grow on the basis of content or we could've also used auto
+    grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem , 1fr) [center-start] repeat(8,
+                            [col-start] minmax(min-content ,14rem) [col-end]) [center-end]
+                            minmax(6rem , 1fr) [full-end]; // approximate screen size between 1100-1200 so 1140px/8columns = 142.5 ~ 140px i.e 14rem
+    & > * {
+        padding: 40px;
+        font-size: 3rem;
+    }
+
 }
