--- a/css/style.css
+++ b/css/style.css
@@ -111,16 +111,35 @@ body {
   padding-top: 4rem;
   display: grid;
   grid-template-rows: 1fr min-content 6rem 1fr;
-  grid-template-columns: min-content;
-  gap: 1.5rem 1.5rem; }
+  grid-template-columns: max-content;
+  gap: 1.5rem 1.5rem;
+  justify-content: center; }
   .header__logo {
     height: 3rem;
     justify-self: center; }
   .header__btn {
     align-self: start;
     justify-self: start; }
-  .header__seenon-logos img {
-    height: 2.5rem; }
+  .header__seenon-text {
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    column-gap: 1.5rem;
+    align-items: center;
+    font-size: 1.6rem;
+    color: #aaa; }
+    .header__seenon-text::before, .header__seenon-text::after {
+      content: "";
+      height: 1px;
+      display: block;
+      background-color: currentColor; }
+  .header__seenon-logos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 3rem;
+    justify-items: center; }
+    .header__seenon-logos img {
+      height: 2.5rem;
+      filter: brightness(70%); }
 
 .realtors {
   background-color: #101d2c;
